# camelot-in-docker

./: .gitignore  Dockerfile  docker-compose.yml  main.py  main.sh  pyproject.toml  requirements.txt
data/input/: mapa-capacidad.yml
input/: main.py
src/: main.py  run_local.py
